# CNOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  linker.ld  run.sh
.github/workflows/: ci.yml  release.yml
__MACOSX/: ._run.sh
boot/: boot.asm
cmake/: x86_64-elf.cmake
integrations/slime-for-chaseros/std/: README.txt
integrations/slime-for-chaseros/std/chaseros/: constants.sm  fd.sm  io.sm  ipc.sm  runtime.sm  syscall.sm
integrations/slime-for-cnos/std/cnos/: constants.sm  errno.sm  io.sm
iso/boot/grub/: grub.cfg
kernel/: clock.h  entry.asm  errno.h  hybrid.h  hybrid_ipc.c  hybrid_ipc.h  idt.c  idt.h  interrupts.asm  io.h  ipc.c  ipc.h  isr.c  main.c  multiboot.c  multiboot.h  pmm.c  pmm.h  process.c  process.h  shell.c  shell.h  syscall_abi.h  sysinfo.c  user.c  user.h  user_fd.c  user_fd.h  vmm.c  vmm.h
kernel/drivers/: font.c  font.h  graphics.c  graphics.h  gui.c  gui.h  ide.c  ide.h  mouse.c  mouse.h  pci.c  pci.h  serial.c  serial.h  sheet.c  sheet.h  ttfont.c  ttfont.h  vga.c  vga.h
kernel/fs/: README  vfs.c  vfs.h
kernel/fs/chaseros/: chaseros_alloc.c  chaseros_ext2.c  chaseros_ext2_vol.c  chaseros_ext2_vol.h  chaseros_io.c  chaseros_io.h  config.h  porting.h
kernel/fs/cnaf/: cnaf.h  cnaf_image.h  cnaf_spec.h  cnaf_validate.c
kernel/fs/cnos/: cnos_alloc.c  cnos_ext2.c  cnos_ext2_vol.c  cnos_ext2_vol.h  cnos_io.c  cnos_io.h  config.h  porting.h
kernel/fs/include/ext2fs/: ext2_err.h  ext2_types.h
scripts/: build-x86_64-elf-toolchain.sh  cnos-slime-compile.sh  cnos-slime-dev-env.sh  cnos-slimec-lib.sh  cnos-slimec.sh  fetch-slime-upstream.sh
user/: CMakeLists.txt  SYSCALL-ABI.txt  chaseros-first.sm  hello-std.sm  hello.c  hello.sm  ipc-hl-demo.sm  slime-demo.sm  syscall-errno-demo.sm
user/apps/: minimal.c
user/chaseros-rt/: README.txt  chaseros_syscalls.asm
user/cnos-rt/: cnos_syscalls.asm
user/include/: chaseros_user.h  cnos_user.h
